tests/error/switch_case_error_expression.bz
// error: couldn't match the function call to any of the candidates
// note: function argument types are 'i32'
// note: candidate: the builtin 'operator --'
function test()
{
	let i = 0;
	switch (i)
	{
		else => --i,
	}
}
